--- a/front_end_app/layout.jade
+++ b/front_end_app/layout.jade
@@ -1,23 +1,24 @@
-doctype html
+doctype 5
 html(ng-app = "myApp")
-  head
+head
     meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='description', content='')
-    meta(name='author', content='')
-    link(rel='icon', href='bower_components/bootstrap/favicon.ico')
-    title= title
-    //Bootstrap core CSS 
-    link(href='bower_components/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
-    //Custom styles for this template 
-    link(href='carousel.css', rel='stylesheet')
-
-    script(src = "bower_components/angular/angular.js")
-    script(src = "bower_components/angular-route/angular-route.js")
-    script(src = "app.js")
-    script(src = "home/home.js")
-  //NAVBAR================================================== 
-  body
-    block content
+      meta(http-equiv='X-UA-Compatible', content='IE=edge')
+      meta(name='viewport', content='width=device-width, initial-scale=1')
+      meta(name='description', content='')
+      meta(name='author', content='')
+      link(rel='icon', href='bower_components/bootstrap/favicon.ico')
+      title Starter Template for Bootstrap
+      //Bootstrap core CSS 
+      link(href='bower_components/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+      //Custom styles for this template 
+      link(href='starter-template.css', rel='stylesheet')
+      //Just for debugging purposes. Don't actually copy these 2 lines! 
+      //if lt IE 9
+        script(src='bower_components/bootstrap/assets/js/ie8-responsive-file-warning.js')
+      script(src='bower_components/bootstrap/assets/js/ie-emulation-modes-warning.js')
+      //HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries 
+      //if lt IE 9
+        script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
+        script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
+      block content
  
