--- a/front_end_app/index.jade
+++ b/front_end_app/index.jade
@@ -1,40 +1,30 @@
 extends layout
 
 block content
-  .navbar-wrapper
-      .container
-        nav.navbar.navbar-inverse.navbar-static-top(role='navigation')
-          .container
-            .navbar-header
-              button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
-                span.sr-only Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
-              a.navbar-brand(href='#') Project name
-            #navbar.navbar-collapse.collapse
-              ul.nav.navbar-nav
-                li.active
-                  a(href='#') Home
-                li
-                  a(href='#about') About
-                li
-                  a(href='#contact') Contact
-                li.dropdown
-                  a.dropdown-toggle(href='#', data-toggle='dropdown')
-                    | Dropdown
-                    span.caret
-                  ul.dropdown-menu(role='menu')
-                    li
-                      a(href='#') Action
-                    li
-                      a(href='#') Another action
-                    li
-                      a(href='#') Something else here
-                    li.divider
-                    li.dropdown-header Nav header
-                    li
-                      a(href='#') Separated link
-                    li
-                      a(href='#') One more separated link
-    div(ng-view)
+  nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+    .container
+      .navbar-header
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='#') Project name
+      #navbar.collapse.navbar-collapse
+        ul.nav.navbar-nav
+          li.active
+            a(href='#') Home
+          li
+            a(href='#about') About
+          li
+            a(href='#contact') Contact
+      ///.nav-collapse 
+  ///.container 
+  div(ng-view)
+  //Bootstrap core JavaScript
+        ================================================== 
+  //Placed at the end of the document so the pages load faster 
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+  script(src='bower_components/bootstrap/dist/js/bootstrap.min.js')
+  //IE10 viewport hack for Surface/desktop Windows 8 bug 
+    script(src='bower_components/bootstrap/assets/js/ie10-viewport-bug-workaround.js')
