--- a/front_end_app/home/home.jade
+++ b/front_end_app/home/home.jade
@@ -1,9 +1,11 @@
 block content
   .container
     .starter-template
-      h1 Bootstrap starter template
+      h1 Li Ching Chang
       p.lead
-        | Use this document as a way to quickly start any new project.
+        | A Software Engineer From Taiwan.
         br
-        | All you get is this text and a mostly barebones HTML document.
+        | Familiar with Web and iOS App Develop.
 
+      //img.img-thumbnail(ng-src = "/home/images/IMG_1474.JPG")
+      img.img-circle.img-thumbnail(ng-src = "/home/images/IMG_1474.JPG")
