--- a/front_end_app/index.jade
+++ b/front_end_app/index.jade
@@ -2,22 +2,22 @@ extends layout
 
 block content
   nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-    .container
-      .navbar-header
+    .container(ng-controller = "TabController as tab")
+      .navbar-header(ng-class = "{active:tab.isSet(1)}")
         button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
           span.sr-only Toggle navigation
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href='#') Project name
+        a.navbar-brand(href='#', ng-click= "tab.setTab(1)") My App
       #navbar.collapse.navbar-collapse
         ul.nav.navbar-nav
-          li.active
-            a(href='#') Home
-          li
-            a(href='#about') About
-          li
-            a(href='#contact') Contact
+          li(ng-class= "{active:tab.isSet(1)}")
+            a(href='#', ng-click= "tab.setTab(1)") Home
+          li(ng-class= "{active:tab.isSet(2)}")
+            a(href='#about', ng-click= "tab.setTab(2)") About
+          li(ng-class= "{active:tab.isSet(3)}")
+            a(href='#project', ng-click= "tab.setTab(3)") Project
       ///.nav-collapse 
   ///.container 
   div(ng-view)
