--- a/front_end_app/layout.jade
+++ b/front_end_app/layout.jade
@@ -7,11 +7,15 @@ head
     meta(name='description', content='This is My First App')
     meta(name='author', content='JJLee')
     link(rel='icon', href='favicon.ico')
+
     title= title
+    
     //Bootstrap core CSS 
     link(href='bower_components/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+
     //Custom styles for this template 
     link(href='app.css', rel='stylesheet')
+
     //Just for debugging purposes. Don't actually copy these 2 lines! 
     //if lt IE 9
       script(src='bower_components/bootstrap/assets/js/ie8-responsive-file-warning.js')
@@ -24,8 +28,10 @@ head
     script(src = "bower_components/angular/angular.js")
     script(src = "bower_components/angular-route/angular-route.js")
     script(src = "app.js")
+    script(src = "index.js")
     script(src = "home/home.js")
     script(src = "about/about.js")
-  
+    script(src = "project/project.js")
+ 
 block content
  
